2007-12-05  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.18+.

2007-12-05  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.18.
	(OCTAVE_API_VERSION): Now api-v30.
	(OCTAVE_RELEASE_DATE): Now 2007-12-05.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* Makefile.in (INCLUDES): Add builtins.h to the list.

	* src/oct-hist.cc (default_history_file): Use += instead of
	push_back to append character to std::string object.

	* Makefile.in (LIBDLFCN): Delete all uses.

	* toplev.cc (octave_config_info): Remove LIBDLFCN and
	DLFCN_INCFLAGS from the list.
	* oct-conf.h.in (OCTAVE_CONF_DLFCN_INCFLAGS, OCTAVE_CONF_LIBDLFCN):
	Delete. 

	* error.cc (Ferror): Handle error id.

	* load-save.cc (Fsave, Fload): Doc fixes.
	From Marco Caliari <caliari@sci.univr.it>.

2007-12-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (base_properties::get_type
        base_properties::get___modified__,
	base_properties::get___myhandle__): New functions.

2007-12-04  Christoph Mayer  <Christoph.Mayer@dlr.de>.

	* toplev.h (clean_up_and_exit, recover_from_exception,
	do_octave_atexit, global_command, curr_parent_function):
	Tag with OCTINTERP_API. 

2007-12-03  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/luinc.cc: Make tests conditional on HAVE_UMFPACK.
	* DLD-FUNCTIONS/spqr.cc: Make tests conditional on HAVE_CXSPARSE.

	* DLD-FUNCTIONS/regexp.cc: Use "%!testif" blocks for conditional
	tests on PCRE.

	* graphics.cc (class axes): Add color and activepositionproperty
	properties to axis objects.
	* graphics.h.in (class axes): ditto.

	* DLD-FUNCTIONS/regexp.cc: Also include sys/types.h for regexp.

2007-11-30  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/sort.cc (operator < (const Complex&, const Complex&),
	operator > (const Complex&, const Complex&)):
	Pass args by const reference, not value.

	* src/data.cc, src/matherr.c, src/pr-output.cc, src/sysdep.cc,