@@ -1,3 +1,8 @@
+2007-12-07  David Bateman  <dbateman@free.fr>
+
+	* graphics.cc (check_limit_val): Delete.
+	(check_limit_vals): Simplify and no longer use check_limit_val.
+
 2007-12-05  John W. Eaton  <jwe@octave.org>
 
 	* version.h (OCTAVE_VERSION): Now 2.9.18+.
